# vigilant-octo-train

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .ralphrc  .session-summary.md  CHECKPOINT.md  CLAUDE.md  CMakeLists.txt  CODE_REPORTCARD.md  LICENSE.txt  PHASE_01_SUMMARY.md  PHASE_01_VERIFICATION.md  README.md
settings/: CLAUDE.md  CMakeLists.txt  settings_app.cpp  settings_app.h  settings_main.cpp
src/: CLAUDE.md  CMakeLists.txt  main.cpp  version.h.in
src/app/: CLAUDE.md  application.cpp  application.h  application_callbacks.cpp  application_wiring.cpp  application_wiring_cnc.cpp  window.cpp  window.h  workspace.cpp  workspace.h
src/core/: CLAUDE.md  types.cpp  types.h
src/core/archive/: CLAUDE.md  archive.cpp  archive.h
src/core/carve/: alignment_validator.cpp  alignment_validator.h  analysis_overlay.cpp  analysis_overlay.h  carve_job.cpp  carve_job.h  carve_streamer.cpp  carve_streamer.h  gcode_export.cpp  gcode_export.h  heightmap.cpp  heightmap.h  island_detector.cpp  island_detector.h  model_fitter.cpp  model_fitter.h  surface_analysis.cpp  surface_analysis.h  tool_recommender.cpp  tool_recommender.h  toolpath_generator.cpp  toolpath_generator.h  toolpath_types.h
src/core/cnc/: byte_stream.h  cnc_controller.cpp  cnc_controller.h  cnc_tool.cpp  cnc_tool.h  cnc_types.h  gamepad_input.cpp  gamepad_input.h  grbl_settings.cpp  grbl_settings.h  macro_manager.cpp  macro_manager.h  preflight_check.cpp  preflight_check.h  serial_port.cpp  serial_port.h  tcp_socket.cpp  tcp_socket.h  tool_calculator.cpp  tool_calculator.h  unified_settings.cpp  unified_settings.h
src/core/config/: CLAUDE.md  config.cpp  config.h  config_watcher.cpp  config_watcher.h  input_binding.cpp  input_binding.h  layout_preset.cpp  layout_preset.h  settings_archive.cpp  settings_archive.h
src/core/database/: CLAUDE.md  cnc_tool_repository.cpp  cnc_tool_repository.h  connection_pool.cpp  connection_pool.h  cost_repository.cpp  cost_repository.h  cut_plan_repository.cpp  cut_plan_repository.h  database.cpp  database.h  gcode_repository.cpp  gcode_repository.h  job_repository.cpp  job_repository.h  material_repository.cpp  material_repository.h  model_repository.cpp  model_repository.h  project_repository.cpp  project_repository.h  rate_category_repository.cpp  rate_category_repository.h  schema.cpp  schema.h  statement_helper.cpp  statement_helper.h  stock_size_repository.cpp  stock_size_repository.h  tool_database.cpp  tool_database.h  toolbox_repository.cpp  toolbox_repository.h
src/core/events/: event_bus.cpp  event_bus.h  event_types.h
src/core/export/: CLAUDE.md  model_exporter.cpp  model_exporter.h  project_export_manager.cpp  project_export_manager.h  project_import.cpp
src/core/gcode/: CLAUDE.md  gcode_analyzer.cpp  gcode_analyzer.h  gcode_modal_scanner.cpp  gcode_modal_scanner.h  gcode_parser.cpp  gcode_parser.h  gcode_types.h  machine_profile.cpp  machine_profile.h
src/core/graph/: graph_manager.cpp  graph_manager.h
src/core/import/: CLAUDE.md  background_tagger.cpp  background_tagger.h  file_handler.cpp  file_handler.h  file_validator.cpp  file_validator.h  filesystem_detector.cpp  filesystem_detector.h  import_log.cpp  import_log.h  import_queue.cpp  import_queue.h  import_task.h
src/core/loaders/: CLAUDE.md  gcode_loader.cpp  gcode_loader.h  loader.h  loader_factory.cpp  loader_factory.h  obj_loader.cpp  obj_loader.h  stl_loader.cpp  stl_loader.h  texture_loader.cpp  texture_loader.h  threemf_loader.cpp  threemf_loader.h
src/core/materials/: default_materials.cpp  default_materials.h  gemini_descriptor_service.cpp  gemini_descriptor_service.h  gemini_material_service.cpp  gemini_material_service.h  material.h  material_archive.cpp  material_archive.h  material_manager.cpp  material_manager.h
src/core/mesh/: CLAUDE.md  bounds.h  hash.cpp  hash.h  mesh.cpp  mesh.h  vertex.h
src/core/optimizer/: CLAUDE.md  bin_packer.cpp  bin_packer.h  clo_result_file.cpp  clo_result_file.h  cut_list_file.cpp  cut_list_file.h  cut_optimizer.cpp  cut_optimizer.h  guillotine.cpp  guillotine.h  multi_stock_optimizer.cpp  multi_stock_optimizer.h  optimizer_utils.h  sheet.h  waste_breakdown.cpp  waste_breakdown.h
src/core/paths/: CLAUDE.md  app_paths.cpp  app_paths.h  path_recovery.cpp  path_recovery.h  path_resolver.cpp  path_resolver.h
src/core/project/: CLAUDE.md  costing_engine.cpp  costing_engine.h  project.cpp  project.h  project_costing_io.cpp  project_costing_io.h  (+2 more)
src/managers/: config_manager.cpp  config_manager.h  file_io_manager.cpp  file_io_manager.h  ui_manager.cpp  ui_manager.h  ui_manager_layout.cpp  ui_manager_menus.cpp
src/render/: CLAUDE.md  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  gl_utils.cpp  gl_utils.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_sources.h  texture.cpp  texture.h  thumbnail_generator.cpp  thumbnail_generator.h
src/ui/: CLAUDE.md  context_menu.h  context_menu_manager.cpp  context_menu_manager.h  icons.h  theme.cpp  theme.h  ui_colors.h  ui_manager.cpp  ui_manager.h
tests/: CLAUDE.md  CMakeLists.txt  stub_thumbnail_generator.cpp  test_analysis_overlay.cpp  test_app_paths.cpp  test_application_state.cpp  test_archive.cpp  test_background_tagger.cpp  test_board_foot.cpp  test_camera.cpp  test_carve_integration.cpp  test_carve_job.cpp  test_carve_streamer.cpp  test_clo_result_file.cpp  test_cnc_controller.cpp  test_cnc_tool_repository.cpp  test_config_watcher.cpp  test_connection_pool.cpp  test_cost_repository.cpp  test_costing_engine.cpp  test_cut_plan_repository.cpp  test_database.cpp  test_event_bus.cpp  test_exporter.cpp  test_file_utils.cpp  test_filesystem_detector.cpp  test_gcode_analyzer.cpp  test_gcode_export.cpp  test_gcode_modal_scanner.cpp  test_gcode_parser.cpp  test_gcode_repository.cpp  test_grbl_settings.cpp  test_hash.cpp  test_heightmap.cpp  test_import_log.cpp  test_import_pipeline.cpp  test_integration_pipeline.cpp  test_island_detector.cpp  test_library_manager.cpp  test_lint_compliance.cpp  (+39 more)
tools/matgen/: CMakeLists.txt  matgen_main.cpp
tools/texgen/: CMakeLists.txt  texgen_main.cpp
(+695 files in other folders)
